--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.0",
     "vue": "^2.6.11",
+    "vue-croppa": "^1.3.8",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
